CustomPoolTest: CustomStreamEx.rawCollect is covered again (coverage regression appeared when toList() was optimized)